--- a/gunsan/css/main.css
+++ b/gunsan/css/main.css
@@ -580,6 +580,11 @@
 .news .news_wrap {
     width: calc(100% - var(--wrapper-mar));
     margin-left: var(--wrapper-mar);
+    display: flex;
+    gap: 0 80px;
+}
+.news .tab_list ul {
+    width: 180px;
 }
 .news .tab_list ul li button {
     display: inline-block;
@@ -602,4 +607,59 @@
     left: 13px;
     top: 50%;
     transform: translateY(-50%);
+}
+
+.news .tab_ctn .tab_item {
+    display: none;
+}
+.news .tab_ctn .tab_item.active {
+    display: block;
+}
+.news .tab_ctn .tab_item .list .swiper .swiper-slide {
+    width: 342px;
+    height: 348px;
+}
+.news .tab_ctn .tab_item .list .swiper .swiper-slide a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 50px 10px 10px 10px;
+    background-color: var(--main1-cw);
+    padding: 34px 43px  0 43px ;
+    box-shadow: 6px -1px 8.1px rgba(0, 0, 0, 0.03);
+}
+.news .tab_ctn .tab_item .list .swiper .swiper-slide a .cate {
+    display: inline-block;
+    padding: 5px 18px;
+    border-radius: 10px;
+    background-color: var(--white);
+    color: var(--main2-c);
+    font-size: 15px;
+}
+.news .tab_ctn .tab_item .list .swiper .swiper-slide a h4 {
+    font-size: 28px;
+    font-weight: 600;
+    color: var(--tit-c);
+    margin: 16px 0 28px 0;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    text-overflow: ellipsis;
+    height: 3.9em;
+    overflow: hidden;
+    word-break: normal;
+}
+.news .tab_ctn .tab_item .list .swiper .swiper-slide a p {
+    font-size: 15px;
+    margin-bottom: 21px;
+    word-break: normal;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    text-overflow: ellipsis;
+    height: 3em;
+    overflow: hidden;
+}
+.news .tab_ctn .tab_item .list .swiper .swiper-slide a .date {
+    font-size: 15px;
 }
