--- a/gunsan/css/main.css
+++ b/gunsan/css/main.css
@@ -113,7 +113,6 @@
 .main_content .mayor {
     width: 49.25%;
     height: 36.11%;
-    overflow: hidden;
 }
 .main_content .mayor .box {
     border-radius: 20px ;
@@ -123,8 +122,7 @@
     padding: 52px 0 0 51px;
     width: 100%;
     height: 100%;
-    display: flex;
-    
+    aspect-ratio: 788 / 390;
 } 
 
 
